# groupmrk

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.specify/memory/: constitution.md
.specify/plans/2026-04-29-bookmarks-manager/: data-model.md  plan.md  quickstart.md  research.md  spec.md
.specify/plans/2026-04-29-bookmarks-manager/contracts/: contract.md
specs/001-bookmarks-manager/: spec.md  tasks.md
specs/002-parser-improvements/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/002-parser-improvements/checklists/: requirements.md
specs/003-http-response-handling/: data-model.md  plan.md  research.md  spec.md  tasks.md
src/groupmrk/: __init__.py  api.py  cli.py  graph.py  models.py  output.py  parser.py  search.py  validator.py  verifier.py
tests/fixtures/: sample-bookmarks.html
tests/unit/: test_models.py  test_output.py  test_parser.py  test_security.py  test_validator.py  test_verifier.py
